[package]
name = "tack"
version = "0.1.1-alpha"
authors = ["Allan Zhang <allanzhang7@gmail.com"]
description = "A minimal syntax highlighter that outputs HTML"
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/allan2/tack/"
keyword = ["syntax", "highlight", "highlighter", "beautify", "beautifer"]
categories = ["parser-implementations", "parsing", "text-processing"]


[dependencies]
